[package]
name = "gtk-text-translator"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
description = "A GTK+ utility to translate text between languages"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yandex_translate_async = "0.3.0"
tokio = "0.2.20"
futures = "0.3.4"