[package]
name = "gtk-text-translator"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
description = "A GTK+ utility to translate text between languages"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
hyper-tls = "0.4.1"
urlencoding = "1.0.0"
http = "0.2.1"
tokio = "0.2.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }