[package]
name = "text-translator"
version = "0.1.0"
authors = ["aunetx <aunetx@yandex.com>"]
description = "A library to translate text between languages, using selected engine API"
edition = "2018"

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
urlencoding = "1.0"
http = "0.2"
tokio = "0.2.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rayon = "1.3.0"